# mpfluid_cave_frontend

./: .gitignore  CMakeLists.txt  README.md
geometry_configurations/: cavity_flow.xml  channelflow.xml  natural_convection.xml  op_room_standard.xml  op_room_standard_hot.xml  rotation_problem.xml  vietnam_city.xml
geometry_files/: Houses.eaf  MARKET.eaf  MOOO.eaf  kugel.eaf  mall.eaf  room.eaf  shark.eaf
include/: CubeMap.h  ImGui_interface.h  Integration.h  Parameters.h  basic_defs.h  connect_fluconnector.h  eaf_loader.h  magnum_defs.h  magnum_helper.h  main_node.h  simulation_configurations.h  vtkProcessor.h
scenograph_starters/: default.conf  start_application_cave  start_application_debug_node  start_application_desktop
src/GUI/: ImGui_interface.cpp
src/master/: connect_fluconnector.cpp  main_master.cpp
src/node/: CubeMap.cpp  CubeMapShader.cpp  Floor_texture.frag  Floor_texture.vert  Types.cpp  carpet.tga  granite-marble-floor.tga  main_node.cpp  main_node.hpp  resources.conf
tests/: configuration_parser_test.cpp  test_vtkprocessor.cpp
